--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=80
 SESSION_SECRET="totallyrandomsecretkey"
+CLIENT_ID="285067580089-5ouscqf9s5aibk671jfeidfbc324tate.apps.googleusercontent.com"
+CLIENT_SECRET="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"
