--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.1.0",
     "passport": "^0.6.0",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oidc": "^0.1.0"
   }
 }
