--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mysql2": "^3.1.0",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oidc": "^0.1.0"
